cmake_minimum_required(VERSION 3.6.0)

install(FILES
    Sub0.h
    Sub10.h
    Sub11.h
    Sub12.h
    Sub13.h
    Sub14.h
    Sub15.h
    Sub16.h
    Sub17.h
    Sub18.h
    Sub19.h
    Sub1.h
    Sub20.h
    Sub21.h
    Sub22.h
    Sub23.h
    Sub24.h
    Sub25.h
    Sub26.h
    Sub27.h
    Sub28.h
    Sub29.h
    Sub2.h
    Sub30.h
    Sub31.h
    Sub32.h
    Sub33.h
    Sub3.h
    Sub4.h
    Sub5.h
    Sub6.h
    Sub7.h
    Sub8.h
    Sub9.h
    Subpacket.h
    Subpackets.h

    DESTINATION include/Packets/Tag2)
