cmake_minimum_required(VERSION 3.0.0)

add_library(Tag2Subpackets OBJECT
    Subpacket.cpp
    Sub0.cpp
    Sub1.cpp
    Sub2.cpp
    Sub3.cpp
    Sub4.cpp
    Sub5.cpp
    Sub6.cpp
    Sub7.cpp
    Sub8.cpp
    Sub9.cpp
    Sub10.cpp
    Sub11.cpp
    Sub12.cpp
    Sub13.cpp
    Sub14.cpp
    Sub15.cpp
    Sub16.cpp
    Sub17.cpp
    Sub18.cpp
    Sub19.cpp
    Sub20.cpp
    Sub21.cpp
    Sub22.cpp
    Sub23.cpp
    Sub24.cpp
    Sub25.cpp
    Sub26.cpp
    Sub27.cpp
    Sub28.cpp
    Sub29.cpp
    Sub30.cpp
    Sub31.cpp
    Sub32.cpp
    Sub33.cpp)

set_property(TARGET Tag2Subpackets PROPERTY POSITION_INDEPENDENT_CODE ON)